--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
   "dependencies": {
     "@nextui-org/navbar": "^2.0.37",
     "@nextui-org/react": "^2.4.8",
+    "@nextui-org/switch": "^2.0.34",
     "@nextui-org/system": "^2.2.6",
     "@nextui-org/theme": "^2.2.11",
     "framer-motion": "^11.9.0",
+    "lucide": "^0.447.0",
+    "lucide-react": "^0.447.0",
     "next": "14.2.14",
     "next-auth": "^4.24.8",
     "next-themes": "^0.3.0",
