--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@nextui-org/link": "^2.0.35",
     "@nextui-org/navbar": "^2.0.37",
     "@nextui-org/react": "^2.4.8",
     "@nextui-org/switch": "^2.0.34",
@@ -18,10 +19,10 @@
     "lucide": "^0.447.0",
     "lucide-react": "^0.447.0",
     "next": "14.2.14",
-    "next-auth": "^4.24.8",
     "next-themes": "^0.3.0",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-icons": "^5.3.0"
   },
   "devDependencies": {
     "@types/node": "^20",
