--- a/package.json
+++ b/package.json
@@ -15,14 +15,16 @@
     "@nextui-org/switch": "^2.0.34",
     "@nextui-org/system": "^2.2.6",
     "@nextui-org/theme": "^2.2.11",
-    "framer-motion": "^11.9.0",
+    "clsx": "^2.1.1",
+    "framer-motion": "^11.11.7",
     "lucide": "^0.447.0",
     "lucide-react": "^0.447.0",
     "next": "14.2.14",
     "next-themes": "^0.3.0",
     "react": "^18",
     "react-dom": "^18",
-    "react-icons": "^5.3.0"
+    "react-icons": "^5.3.0",
+    "tailwind-merge": "^2.5.3"
   },
   "devDependencies": {
     "@types/node": "^20",
